--- a/DCXHealthCenter/src/main/resources/application.properties
+++ b/DCXHealthCenter/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+# Output to a temp_folder/file
+logging.file.name=E:/dcxhcwork/logs/application.log
+
+
+#logging.level.org.springframework=ERROR 
+#logging.level.com.cg.restfulweb=INFO
